Changed collapse rules. Collapses on 1000px wide, to avoid having a nav bar too large that won't fit

--- a/timetable/static/css/style.css
+++ b/timetable/static/css/style.css
@@ -68,17 +68,6 @@ body {
   padding-bottom: 5px;
 }
 
-/*.navbar-nav {
-  border-left: 1px solid #999999;
-}*/
-
-/*.navbar-nav li {
-  background-repeat: no-repeat;
-  background-image: url('arrow.png');
-  background-position: right;
-  padding-right: 20px;
-}*/
-
 /* Customize container */
 @media (min-width: 768px) {
   .container {
@@ -171,8 +160,17 @@ dd {
     background-image: url('arrow.png');
     background-position: right;
     padding-right: 20px;
+    padding-left: 10px;
   }
-}
+
+  .nav.breadcrumbs>li>a {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  .nav>li>a {
+    font-size: 11px;
+  }
 
 .video-container {
     position: relative;
@@ -189,4 +187,52 @@ dd {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+@media (max-width: 1000px) {
+    .navbar-header {
+                float: none;
+                    
+    }
+    .navbar-left,.navbar-right {
+                float: none !important;
+                    
+    }
+    .navbar-toggle {
+                display: block;
+                    
+    }
+    .navbar-collapse {
+                border-top: 1px solid transparent;
+                        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+                            
+    }
+    .navbar-fixed-top {
+                top: 0;
+                        border-width: 0 0 1px;
+                            
+    }
+    .navbar-collapse.collapse {
+                display: none!important;
+                    
+    }
+    .navbar-nav {
+                float: none!important;
+                        margin-top: 7.5px;
+                            
+    }
+    .navbar-nav>li {
+                float: none;
+                    
+    }
+    .navbar-nav>li>a {
+                padding-top: 10px;
+                        padding-bottom: 10px;
+                            
+    }
+    .collapse.in{
+                display:block !important;
+                    
+    }
+
 }
